--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -11,11 +11,19 @@
     background-size: cover;
     background-repeat: no-repeat;
 
+
 }
 .house{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+ 
 
 
+
+}
+.background{
+    width: 200px;
+    height: 100px;
+    background-image:url(../img/harvard.jpg) ;
 }
