--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -11,3 +11,15 @@ body, html {
 .jumbotron{
     height: 500px;
 }
+.loader-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+.lead{
+    font-size:2px;
+}
+
