--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -1,3 +1,4 @@
+
 *{
 
     padding: 0;
@@ -17,7 +18,34 @@
 .card1{
     background-color: #1c1c1cb5;
 }
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure the loader is on top of other content */
+}
 
+/* Customize the loader appearance */
+.loader::after {
+    content: "";
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 .house{
     background-position: center;
@@ -44,3 +72,4 @@
     background-repeat: no-repeat;
 
 }
+
